Bugfix autoscroll when sorting elements + no weird offset on Firefox + moved system config to a separate file

--- a/static/css/station/station.css
+++ b/static/css/station/station.css
@@ -936,10 +936,6 @@ input#search:focus{
 
 /* ------- ITEMS (BUFFER) ------- */
 
-#buffer-tab .tab-content:nth-child(2){
-	overflow: auto;
-}
-
 #buffer-tab .tab-content:nth-child(2) .item:first-child:hover a.item-cross{
 	visibility:hidden;
 }
